force-app/main/default/objects/Recurring_Donation__c/Recurring_Donation__c.object-meta.xml
<CustomObject>
    <description>To track individual recurring donations.</description>
    <label>Recurring Donation</label>
    <nameField>
        <label>Recurring Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>