force-app/main/default/objects/Recurring_Donation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual person promises for recurring donation.</description>
    <inlineHelpText>Individual person promising for recurring donation.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>