force-app/main/default/objects/Recurring_Donation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional details or notes about the recurring donation.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>