force-app/main/default/objects/Recurring_Donation__c/fields/Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Date__c</fullName>
    <description>The date when the recurring donation was made.</description>
    <label>Donation Date</label>
    <type>Date</type>
</CustomField>