force-app/main/default/objects/Recurring_Donation__c/fields/Donation_Pledge_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Pledge_Date__c</fullName>
    <description>The date when the donor pledged the donation.</description>
    <inlineHelpText>Himmet sozunun alindigi gun.</inlineHelpText>
    <label>Donation Pledge Date</label>
    <type>Date</type>
</CustomField>