force-app/main/default/objects/Recurring_Donation__c/fields/Income_Budget__c.field-meta.xml
<CustomField>
    <fullName>Income_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Budget</label>
    <referenceTo>Income_Budget__c</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>