force-app/main/default/objects/Recurring_Donation__c/fields/Promised_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promised_Donation_Amount__c</fullName>
    <description>The total amount promised by the donor for the fiscal year.</description>
    <inlineHelpText>Total Amount promised by donor to pay during Fiscal Year.</inlineHelpText>
    <label>Promised Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>