force-app/main/default/objects/Recurring_Donation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates the current lifecycle stage of the recurring donation (pledge). Used to track whether the donor’s recurring commitment is ongoing, completed, paused, or cancelled. This field controls which records are included in active income projections and reports.</description>
    <inlineHelpText>Indicates the current state of the recurring pledge. Use Active for ongoing donations, Completed when fully paid, Cancelled if the donor stopped early, and Paused for temporary holds.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>