force-app/main/default/objects/Recurring_Donation__c/fields/Total_Amount_Left_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Left_to_Receive__c</fullName>
    <description>Total amount left to pay by donor from promised amount</description>
    <formula>IF(
    ISBLANK(Promised_Donation_Amount__c),
    NULL,
    Promised_Donation_Amount__c - Total_Amount_Received__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Left to Receive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>