force-app/main/default/objects/Recurring_Donation__c/fields/Total_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received__c</fullName>
    <description>Total amount paid from promised amount by donor.</description>
    <inlineHelpText>Automatically calculated through Income Entries. (Girilen Income Kaydina gore bu kayittan toplam ne kadar toplanmis hesapliyor)</inlineHelpText>
    <label>Total Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>