force-app/main/default/objects/Recurring_Donation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Income_Budget__c</columns>
    <columns>Donor_Name__c</columns>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Promised_Donation_Amount__c</columns>
    <columns>Total_Amount_Received__c</columns>
    <columns>Total_Amount_Left_to_Receive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>